--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo-no-bg.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/img/logo-no-bg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PlantGuardian</title>
   </head>
-  <body>
+  <body class="font-mono">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
