basic setup done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/img/logo-no-bg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PlantGuardian</title>
   </head>
-  <body class="font-mono">
+  <body class="bg-[rgb(var(--bg))] text-[rgb(var(--text))]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
